nginx.yaml

kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 398767507008.dkr.ecr.us-east-1.amazonaws.com/apiapp:2.5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
